themes/si8/css/style.css
/* ... */
footer .footer-menus.title h2 {
  color: #fff;
}
body.user-logged-in {
  padding-top: 336px !important;
}
body.user-logged-in.ridotto {
  padding-top: 212px !important;
}
body.user-logged-in #mainheader {
  top: 80px;
}
#mainheader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
  z-index: 100;
}
#mainheader.ridotto {
  height: 64px;
}
#mainheader.ridotto .header-up {
  height: 4px;
  overflow: hidden;
}
#mainheader.ridotto .header-down {
  height: 0px;
  overflow: hidden;
}
#mainheader.ridotto .site-title {
  padding: 14px 0;
  font-size: 2.5rem;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
}
#mainheader.ridotto .site-title .subtitle {
  display: none;
}
#mainheader.ridotto .icon-social {
  display: none;
}
#mainheader.ridotto input.form-text {
  height: 42px;
}
#mainheader.ridotto .header-main {
  height: 64px;
}
#mainheader.ridotto .header-main .hamburger-toggle {
  margin-top: 0;
}
#mainheader.ridotto .header-main .ricerca {
  margin-top: 9px;
}
#mainheader.ridotto .header-main .ricerca button {
  height: 42px;
}
#mainheader.ridotto .header-top .selettorelingua .select-wrapper:after {
  display: none;
}
.header-top {
  background: #30373d;
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
}
.header-top a {
  color: #fff;
}
.header-top .logo {
  width: 25px;
  height: 25px;
  margin-right: 10px;
}
.header-top .header-top2 {
  position: absolute;
  top: 0;
  right: 0;
}
.header-top .header-top1 {
  padding: 10px 10px 0 10px;
  font-weight: bold;
}
@media (max-width: 768px) {
  .header-top .header-top1 {
    padding: 0;
  }
  .header-top .header-top1 .ras-mobile {
    margin-top: 6px;
    font-size: 1.2rem;
  }
}
.header-top .selettorelingua {
  display: inline-block;
  width: 150px !important;
  background-color: #7ea6e0;
  text-transform: uppercase;
}
.header-top .selettorelingua .select-wrapper select {
  line-height: inherit;
}
.header-top .selettorelingua .select-wrapper:after {
  color: #fff;
}
.header-top .selettorelingua select {
  border: none;
  border-radius: 0;
  background-color: #7ea6e0;
  color: #fff;
  width: 150px !important;
  box-shadow: none;
  text-transform: uppercase;
  height: 48px;
}
.header-top .selettorelingua select option {
  background-color: #7ea6e0;
  color: #fff;
}
.header-top .selettorelingua select option:hover {
  background: red;
}
.header-top .accedi {
  border-radius: 0;
  background-color: #5389d6;
  display: inline-block;
  padding: 14px 60px;
  color: #fff;
  text-transform: uppercase;
  font-weight: bold;
}
.header-top .accedi:hover {
  text-decoration: underline;
}
.header-top .selettorelingua {
  background-color: #7ea6e0;
  float: left;
}
.header-top .selettorelingua ul {
  margin-bottom: 0;
  padding: 14px;
}
.header-top .selettorelingua ul li {
  display: inline-block;
  text-transform: uppercase;
  list-style-type: none;
}
.header-top .selettorelingua ul li::after {
  content: ' |';
}
.header-top .selettorelingua ul li:last-child::after {
  content: '';
}
.header-top .selettorelingua ul li a {
  padding: 0 7px;
}
.header-top .selettorelingua ul li a.is-active {
  font-weight: bold;
  text-decoration: underline;
}
.hamburger-toggle {
  font-size: 3.5rem;
  margin: 46px 24px;
  cursor: pointer;
}
.header-up {
  height: 48px;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
}
.header-main {
  height: 150px;
  background: #286bcc;
  color: #fff;
  padding: 0;
  position: relative;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
}
.header-main .toggle-text {
  display: block;
  margin-top: -8px;
  font-size: 1.1rem;
  text-transform: uppercase;
}
.header-main a {
  color: #fff;
}
.header-main .icon-social {
  text-align: right;
  margin-top: 5px;
}
.header-main .icon-social a {
  font-size: 3rem;
  display: inline-block;
  margin-left: 15px;
}
.header-main .site-title {
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-size: 3.7rem;
  padding: 36px 0;
}
.header-main .site-title .subtitle {
  font-size: 1.8rem;
  display: block;
}
.header-main .ricerca {
  margin-top: 5px;
}
.header-main .ricerca label {
  display: none;
}
.header-main .ricerca input.form-text {
  border: none;
  border-radius: 0;
  font-size: 1.5rem;
  height: 50px;
}
.header-main .ricerca button {
  color: #fff;
  background-color: #333;
  border: none;
  border-radius: 0;
  margin-right: 0;
  height: 50px;
  width: 50px;
  margin-left: -4px;
  font-size: 2.5rem;
}
.header-down {
  height: 60px;
  background-color: #5389d6;
  text-align: center;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
}
.header-down .navbar-nav {
  display: inline-block;
  float: none !important;
  padding: 2px;
  width: 100%;
}
.header-down .navbar-nav li:first-child {
  display: none;
}
.header-down .navbar-nav li {
  display: inline-block;
  float: none !important;
}
.header-down .navbar-nav a {
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-size: 2rem;
}
.header-down .navbar-nav a:hover,
.header-down .navbar-nav a:active,
.header-down .navbar-nav a:focus {
  background-color: transparent;
  text-decoration: underline;
}
.region-header {
  margin-bottom: 20px;
}
.region-header h2.block-title {
  font-size: 2.5rem;
  color: #777777;
}
body {
  margin-top: 0;
  padding-top: 256px;
}
body.ridotto {
  padding-top: 132px;
}
.main-container {
  margin-top: 30px;
}
.path-frontpage h1.page-header {
  display: none;
}
.path-frontpage ol.breadcrumb {
  display: none;
}
h1.page-header {
  border: 0;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 4rem;
  float: left;
}
#block-addtoanybuttons {
  float: right;
}
#block-addtoanybuttons .a2a_svg,
#block-addtoanybuttons .a2a_count {
  border-radius: 0 !important;
}
#block-addtoanybuttons svg {
  background-color: #286bcc;
}
/* ... */

